# ml-model-serving-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
docker/: Dockerfile  docker-compose.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: credit_risk_api.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: build_reference_distribution.py
src/api/: drift.py  main.py  monitoring.py  predictor.py  reference_score_distribution.json  schemas.py
tests/: conftest.py  test_api.py  test_drift.py  test_monitoring.py  test_schemas.py
