[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-api"
version = "1.0.0"
description = "Production FastAPI service for credit default risk scoring"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
serve = [
    "uvicorn[standard]>=0.29",
    "gunicorn>=22.0",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # needed by TestClient
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
